<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmcl_msgs</name>
  <version>2.4.0</version>
  <description>The rmcl_msgs package</description>
  <maintainer email="alexander.mock@naturerobots.com">Alexander Mock</maintainer>
  <maintainer email="lniecksch@uos.de">Lennart Niecksch</maintainer>
  
  <license>BSD-3-Clause</license>
  
  <url>https://github.com/uos/rmcl</url>
  <author email="alexander.mock@naturerobots.com">Alexander Mock</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
