<?xml version="1.0"?>
<package format="2">
    <name>rmcl_ros</name>
    <version>1.2.0</version>
    <description>The rmcl_ros package</description>

    <maintainer email="amock@uos.de">Alexander Mock</maintainer>

    <license>BSD</license>
    <author email="amock@uos.de">Alexander Mock</author>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>vision_msgs</build_depend>
    <build_depend>rmcl_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>tf2_ros</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>visualization_msgs</build_export_depend>
    <build_export_depend>vision_msgs</build_export_depend>
    <build_export_depend>rmcl_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>vision_msgs</exec_depend>
    <exec_depend>rmcl_msgs</exec_depend>
    <depend>rmagine</depend>
    <depend>rmcl</depend>
    
</package>
