<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmcl_ros</name>
    <version>2.2.2</version>
    <description>The RMCL package. Software Tools for Mobile Robot Localization in 3D Meshes.</description>

    <maintainer email="amock@uos.de">Alexander Mock</maintainer>

    <license>BSD</license>
    <author email="amock@uos.de">Alexander Mock</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>rmcl_msgs</depend>
    <depend>image_transport</depend>
    <depend>visualization_msgs</depend>
    <depend>rmcl</depend>
    <depend>rmagine</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
